# muxplex

./: .gitignore  AGENTS.md  CHANGELOG.md  Caddyfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
assets/branding/: DESIGN-SYSTEM.md  README.md  tokens.css  tokens.json
coordinator/: bells.py  main.py  sessions.py  state.py  ttyd.py
coordinator/tests/: test_api.py  test_bells.py  test_frontend_css.py  test_frontend_html.py  test_integration.py  test_sessions.py  test_state.py  test_ttyd.py
docs/: TRUSTING_THE_LOCAL_CA.md  how-we-built-the-muxplex-brand.md
docs/plans/: 2026-03-26-web-tmux-dashboard-design.md  2026-03-26-web-tmux-phase1-backend.md  2026-03-26-web-tmux-phase2a-frontend-static.md  2026-03-26-web-tmux-phase2b-javascript.md  2026-03-27-session-sidebar-design.md  2026-03-27-session-sidebar-implementation.md  2026-03-28-auth-design.md  2026-03-28-auth-phase1-infrastructure.md  2026-03-28-auth-phase2-ui-cli.md  2026-03-28-packaging-for-distribution.md  2026-03-29-settings-design.md  2026-03-29-settings-phase1.md  2026-03-29-settings-phase2.md  2026-03-30-multi-device-federation-design.md  2026-03-30-multi-device-federation-phase1.md  2026-03-30-multi-device-federation-phase2.md  2026-03-30-multi-device-federation-phase3.md  2026-03-31-cli-phase1-config-serve.md  2026-03-31-cli-phase2-service-commands.md  2026-03-31-cli-service-refactor-design.md  2026-04-01-federation-proxy-rewrite.md  2026-04-03-tls-phase1-foundation.md  2026-04-03-tls-phase2-autodetect.md  2026-04-03-tls-setup-design.md  2026-04-04-device-selector.md  2026-04-04-tls-nudge-design.md  2026-04-08-federation-state-propagation-design.md  2026-04-08-federation-state-propagation-plan.md  2026-04-08-server-side-settings-design.md  2026-04-08-server-side-settings-plan.md  2026-04-15-views-design.md  2026-04-15-views-phase1-implementation.md  2026-04-15-views-phase2-implementation.md  2026-04-15-views-phase3-implementation.md  README.md
frontend/: app.js  index.html  style.css  terminal.js
frontend/tests/: test_app.mjs  test_terminal.mjs
muxplex/: __main__.py  auth.py  bells.py  breaker.py  cli.py  identity.py  main.py  service.py  sessions.py  settings.py  state.py  tls.py  ttyd.py  views.py
muxplex/frontend/: app.js  index.html  login.html  manifest.json  style.css  terminal.js
muxplex/frontend/tests/: test_app.mjs  test_terminal.mjs
muxplex/tests/: test_api.py  test_auth.py  test_bells.py  test_breaker.py  test_cli.py  test_frontend_css.py  test_frontend_html.py  test_frontend_js.py  test_identity.py  test_integration.py  test_main.py  test_readme.py  test_service.py  test_sessions.py  test_settings.py  test_settings_sync_poll.py  test_shutdown.py  test_state.py  test_tls.py  test_ttyd.py  test_ux_fixes.py  test_views.py  test_ws_proxy.py
scripts/: render-brand-assets.py  spike_bell_flag.py
