[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmux-web-coordinator"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["muxplex/tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib -m 'not integration'"
markers = [
    "integration: marks tests as integration tests requiring real tmux (deselect with '-m not integration')",
]
